gitops/data/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aligner-redis
  namespace: aligner-data
spec:
  selector:
    app.kubernetes.io/name: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
